--- a/modules/routing/strategy/BUILD
+++ b/modules/routing/strategy/BUILD
@@ -18,7 +18,7 @@ cc_library(
         "a_star_strategy.h",
         "strategy.h",
     ],
-    copts = ['-DMODULE_NAME=\\"routing\\"'],
+    copts = ["-DMODULE_NAME=\\\"routing\\\""],
     deps = [
         "//modules/routing/graph",
     ],
