--- a/modules/dreamview/backend/BUILD
+++ b/modules/dreamview/backend/BUILD
@@ -11,7 +11,7 @@ cc_library(
     hdrs = [
         "dreamview.h",
     ],
-    copts = ['-DMODULE_NAME=\\"dreamview\\"'],
+    copts = ["-DMODULE_NAME=\\\"dreamview\\\""],
     deps = [
         "//modules/common/configs:vehicle_config_helper",
         "//modules/common/status",
