--- a/modules/drivers/gnss/BUILD
+++ b/modules/drivers/gnss/BUILD
@@ -13,7 +13,7 @@ cc_library(
     name = "gnss_component_lib",
     srcs = ["gnss_component.cc"],
     hdrs = ["gnss_component.h"],
-    copts = ['-DMODULE_NAME=\\"gnss\\"'],
+    copts = ["-DMODULE_NAME=\\\"gnss\\\""],
     deps = [
         "//cyber",
         "//modules/common/monitor_log",
