--- a/modules/drivers/radar/ultrasonic_radar/BUILD
+++ b/modules/drivers/radar/ultrasonic_radar/BUILD
@@ -72,7 +72,7 @@ cc_library(
     hdrs = [
         "ultrasonic_radar_canbus_component.h",
     ],
-    copts = ['-DMODULE_NAME=\\"ultrasonic_radar_canbus\\"'],
+    copts = ["-DMODULE_NAME=\\\"ultrasonic_radar_canbus\\\""],
     deps = [
         ":ultrasonic_radar_canbus_lib",
         "//modules/common/adapters:adapter_gflags",
