--- a/modules/drivers/velodyne/compensator/BUILD
+++ b/modules/drivers/velodyne/compensator/BUILD
@@ -13,7 +13,7 @@ cc_library(
     name = "compensator_component_lib",
     srcs = ["compensator_component.cc"],
     hdrs = ["compensator_component.h"],
-    copts = ['-DMODULE_NAME=\\"velodyne\\"'],
+    copts = ["-DMODULE_NAME=\\\"velodyne\\\""],
     deps = [
         "//cyber",
         "//modules/drivers/velodyne/compensator:compensator_lib",
@@ -28,7 +28,7 @@ cc_library(
     hdrs = [
         "compensator.h",
     ],
-    copts = ['-DMODULE_NAME=\\"velodyne\\"'],
+    copts = ["-DMODULE_NAME=\\\"velodyne\\\""],
     deps = [
         "//cyber",
         "//modules/drivers/proto:sensor_proto",
